--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
-tonic = "0.14.2"
+tonic = { version = "0.11.0", features = ["tls-roots"] }
+tonic-health = "0.11.0"
 bytes = "1.10.1"
 futures = "0.3.31"
-yellowstone-grpc-proto = "9.0.0"
+yellowstone-grpc-proto = "5.0.0"
+thiserror = "1.0"
+
