--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-uuid = { version = "1.0", features = ["v4"] }
+uuid = { version = "1.0", features = ["v4","serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
 bcrypt = "0.15"
 tokio = { version = "1.0", features = ["full"] }
+rust_decimal = "1.37.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
