--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -4,8 +4,26 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+# tokio = { version = "1.0", features = ["full"] }
+# # tonic = "0.14.2"
+# bytes = "1.10.1"
+# futures = "0.3.31"
+# # yellowstone-grpc-proto = "9.0.0"
+# yellowstone-grpc-proto = "1.12"
+# yellowstone-grpc-client = "1.12"
+# tonic = { version = "0.10", features = ["tls", "tls-roots"] }
+# tonic-health = "0.10"
+
+yellowstone-grpc-proto = "1.12"
+yellowstone-grpc-client = "1.12"
+tonic = { version = "0.10", features = ["tls", "tls-roots"] }
+tonic-health = "0.10"
 tokio = { version = "1.0", features = ["full"] }
-tonic = "0.14.2"
-bytes = "1.10.1"
-futures = "0.3.31"
-yellowstone-grpc-proto = "9.0.0"
+futures = "0.3"
+solana-sdk = "1.16"
+bs58 = "0.5"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+thiserror = "1.0"
+bytes = "1.0"
